--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.12.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.7</version>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
