--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,16 @@
           <target>17</target>
         </configuration>
       </plugin>
-
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+                <suiteXmlFiles>
+                    <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                </suiteXmlFiles>
+            </configuration>
+        </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
@@ -27,7 +36,6 @@
                     </goals>
                     <configuration>
                         <failOnWarning>true</failOnWarning>
-                        <outputFile>dependency-analysis-report.txt</outputFile>
                     </configuration>
                 </execution>
             </executions>
@@ -83,6 +91,11 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.32</version>
+    </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-api</artifactId>
+        <version>4.8.1</version>
     </dependency>
 
     <dependency>
